# contxt

./: Taskfile.yml  pyproject.toml
.github/workflows/: pypi-publish.yml  test.yml
contxt/: repo_flattener.py
test/: test_repo_flattener.py
