[project]
name = "contxt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "click>=8.1.8",
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
contxt = "contxt.repo_flattener:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]


[tool.hatch.build.targets.wheel]
packages = ["contxt"]
